2011-10-12 Pierrick Caillon <pierrick@in-cite.net>
	* Bug fix: count parameter was not used in the API call of APIService::getNextDeparture

2011-10-07 Pierrick Caillon <pierrick@in-cite.net>
	* Updated autoload.php
	* Fixed attribute name in Proximity node.
	* Changed method name from getLineByStopAreaCode to getLineListByStopAreaCode in APIService to match existing methods naming and return type.
	* Bug fix in CoordinateConverter call in Coord node.

2011-10-06 Pierrick Caillon <pierrick@in-cite.net>
	* Fixed type definition for odd property in HangList node.
	* Added Proximity node.
	* API request PTReferential for LineList filtered by StopArea.
	* API request ProximityList.

2011-10-05 Pierrick Caillon <pierrick@in-cite.net>
	* API request PTReferential for StopAreaList (by code only).

2011-10-04 Pierrick Caillon <pierrick@in-cite.net>
	* Corrected time reading in CallValue.
	* Added specific list type for Hang elements: HangList. Changed usage in EntryPoint and StopArea.
	* API request NextDeparture.

2011-09-29 Pierrick Caillon <pierrick@in-cite.net>
	* Added Comment node.
	* Added comment attribut in Stop node. Note declared in XSDs.
	* Added CommentList in APIService::getDepartireBoard* methods.
	* Corrected a bug not skipping an XML Node when it does not contain relevant information. Result was then truncated.

2011-09-21 Pierrick Caillon <pierrick@in-cite.net>
	* Added API calls for PTReferential.ModeTypeList and MakeBinaryCriteria. Only ModeType support for MakeBinaryCriteria.

2011-09-20 Pierrick Caillon <pierrick@in-cite.net>
	* Added isDebugEnabled to debug class.

2011-09-15 Pierrick Caillon <pierrick@in-cite.net>
	* Bug: Coordinate convertion is not accurate. There is a nearly fixed noticable translation.

2011-09-02 Pierrick Caillon <pierrick@in-cite.net>
	* Charset fix.
	* EntryPointDefinition convertion fix.
	* Removed echo'ed debug in CoordinateConverter.

2011-08-31 Pierrick Caillon <pierrick@in-cite.net>